--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 
 <header>
 <nav class="container">
-<div class="logo">☕ CofeeNet</div>
+<div class="logo"> کافی‌نت آنلاین 24</div>
 <ul class="nav-links">
 <li><a href="#hero">خانه</a></li>
 <li><a href="#services">خدمات</a></li>
 <li><a href="#features">ویژگی‌ها</a></li>
 <li><a href="#contact">تماس</a></li>
 </ul>
-<a href="#contact" class="btn">همین الان شروع کنید 🚀</a>
+<a href="#contact" class="btn">همین الان پیام بدین </a>
 </nav>
 </header>
 
@@ -269,7 +269,7 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 <section id="features" class="section">
 <div class="container">
 <div class="section-header reveal">
-<h2>💎 چرا CofeeNet؟</h2>
+<h2>💎 چرا کافی‌نت آنلاین 24؟</h2>
 <p class="section-subtitle">
 مزایای کار با ما - انتخاب هوشمندانه برای موفقیت شما
 </p>
@@ -375,7 +375,7 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 <div class="container">
 <div class="footer-content">
 <div class="footer-about">
-<h3>☕ CofeeNet Online</h3>
+<h3> کافی‌نت آنلاین 24 Online</h3>
 <p>
 ارائه‌دهنده خدمات حرفه‌ای دانشجویی، طراحی سایت و هوش مصنوعی. همراه قابل اعتماد شما در مسیر موفقیت تحصیلی و حرفه‌ای.
 </p>
@@ -403,7 +403,7 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 </div>
 
 <div class="footer-bottom">
-<p>© ۱۴۰۳ CofeeNet Online - با ❤️ برای موفقیت شما</p>
+<p>© ۱۴۰۳ کافی‌نت آنلاین 24 Online - با ❤️ برای موفقیت شما</p>
 </div>
 </div>
 </footer>
