Enhance contact section with new messaging options
Added contact options for WhatsApp, Telegram, and Eitaa.

--- a/index.html
+++ b/index.html
@@ -321,22 +321,32 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 <p>
 هم‌اکنون با ما تماس بگیرید و از مشاوره رایگان بهره‌مند شوید. ما آماده‌ایم تا بهترین خدمات را به شما ارائه دهیم!
 </p>
-
 <div class="contact-grid">
 <div class="contact-card reveal">
 <div style="font-size:3rem;margin-bottom:.5rem">📧</div>
 <h3>ایمیل</h3>
 <a href="mailto:onlinecafenet24@gmail.com">onlinecafenet24@gmail.com</a>
 </div>
-
 <div class="contact-card reveal">
-<div style="font-size:3rem;margin-bottom:.5rem">📱</div>
-<h3>شماره تماس</h3>
-<a href="tel:+989052704491" dir="ltr">09052704491</a>
+<div style="margin-bottom:.5rem"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" style="width:48px;height:48px"></div>
+<h3>واتساپ</h3>
+<a href="https://wa.me/989052704491" target="_blank" dir="ltr">09052704491</a>
+</div>
+<div class="contact-card reveal">
+<div style="margin-bottom:.5rem"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/telegram.svg" alt="Telegram" style="width:48px;height:48px;filter:invert(1)"></div>
+<h3>تلگرام</h3>
+<a href="https://t.me/onlinecafenet24" target="_blank">@onlinecafenet24</a>
+</div>
+<div class="contact-card reveal">
+<div style="margin-bottom:.5rem"><img src="https://eitaa.com/favicon.ico" alt="Eitaa" style="width:48px;height:48px"></div>
+<h3>ایتا</h3>
+<a href="https://eitaa.com/onlinecafenet24" target="_blank">@onlinecafenet24</a>
 </div>
 </div>
-
-<h3 style="color:white;margin:4rem 0 1.5rem;font-size:1.8rem">🌟 ما را در شبکه‌های اجتماعی دنبال کنید</h3>
+  
+  
+  
+  <h3 style="color:white;margin:4rem 0 1.5rem;font-size:1.8rem">🌟 ما را در شبکه‌های اجتماعی دنبال کنید</h3>
 <div class="social-grid">
 <a href="https://instagram.com/onlinecafenet24" target="_blank" class="social-btn instagram reveal" aria-label="Instagram">
 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v8/icons/instagram.svg" alt="Instagram">
