--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ footer{background:white;padding:3rem 0 1.5rem;border-top:3px solid var(--accent1
 </div>
 
 <div class="footer-bottom">
-<p>© 1404 کافی‌نت آنلاین 24 Online - با آرزوی موفقیت برای موفقیت شما</p>
+<p>© 1404 کافی‌نت آنلاین 24  - با آرزوی موفقیت برای موفقیت شما</p>
 </div>
 </div>
 </footer>
